--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
 body {
   background-color: black;
 }
+
+#root{
+  display: inline-block;
+  position: relative;
+}
+
+#overlappingDiv{
+  background-color: black; 
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+}
