--- a/src/style.css
+++ b/src/style.css
@@ -48,13 +48,13 @@ button:hover {
   display: flex;
 }
 
-#battleBar div:first-child {
+#attacksBox {
   width: 66.66%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
 
-#battleBar div:nth-child(2n) {
+#attackType {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -105,4 +105,16 @@ button:hover {
   border: 4px solid black;
   border-radius: 10px;
   padding: 12px;
+}
+
+#dialoguesDiv{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  padding: 12px;
+  display: none;
+  cursor: pointer;
 }
