--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,7 @@ button:hover {
   left: 0;
   opacity: 0;
   pointer-events: none;
+  z-index: 10;
 }
 
 #battleBar {
@@ -77,7 +78,7 @@ button:hover {
   font-size: 16px;
 }
 
-#monsterLifeBar, #ownMonsterLifeBar{
+#monsterLifeBar, #ownMonsterLifeBar {
   position: relative;
 }
 
@@ -107,7 +108,7 @@ button:hover {
   padding: 12px;
 }
 
-#dialoguesDiv{
+#dialoguesDiv {
   position: absolute;
   top: 0;
   right: 0;
@@ -117,4 +118,8 @@ button:hover {
   padding: 12px;
   display: none;
   cursor: pointer;
+}
+
+#userInterface {
+  display: none;
 }
